# Atlas-OS

./: .geminiignore  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  ATLAS_DISCOVERY_VISION.html  CLAUDE.md  CLEANUP_COMPLETE.md  COMMIT_MESSAGE.txt  COMPLETION_REPORT.md  DEV_SETUP.md  EXAMPLE_QUERIES.md  FIXES_SUMMARY.md  GUIDE.md  INGESTION_FIX.md  INSTALLATION.md  LLM_IMPROVEMENTS.md  MARKET_ANALYSIS.md  OLLAMA_SETUP.md  PERFORMANCE_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_OLD.md  README_PERFORMANCE_FIXES.md  REDESIGN_SUMMARY.md  REFACTORING_COMPLETE.md  RETROSYNTHESIS_README.md  RUN.md  SETUP_FULL_SYSTEM.md  SETUP_GUIDE.md  SETUP_WINDOWS.md  START_HERE.md  SYNTHESIS_AGENT_README.md  TESTING.md  VERIFICATION_COMPLETE.md  atlas.md  build-backend.ps1  (+45 more)
.claude/: settings.json  settings.local.json
.claude/commands/: add-plugin.md  atlas-status.md  start-backend.md  start-frontend.md  test-api.md
.claude/plans/: GET THIS GOOD.md  atlas-3.0-implementation-plan.md  vectorized-wibbling-giraffe.md
backend/: .env.example  Dockerfile  README_REFACTOR.md  app.py  atlas.spec  backend_log.txt  check_cuda.py  cleanup_orphaned_files.py  config.py  database.py  document_store.py  ingest.py  init_db.py  knowledge_graph.py  query_orchestrator.py  requirements.txt  run_server.py  server.py  server_demo.py  server_old.py  test_chemllm_check.py  test_chemllm_final.py  test_gpu_backend.py  test_hf_chemllm_load.py  test_mfg_agent.py  vector_store.py
backend/.venv2/: pyvenv.cfg
backend/agents/: __init__.py  (+7 more)
config/: .aider.conf.yml  .aiderignore  .env.example  aider_model_metadata.json
docs/: ATLAS_DISCOVERY_VISION.md  AgentWorkstreams.md  Atlas_Technical_Architecture.md  ConversionPlan.md  DiscoveryOS_ChemistryEngine_Plan.md  DiscoveryOS_GoldenPath_Plan.md  FrontendRedesignPlan.md  MultiAgent_Discovery_Architecture.md  MultiAgent_Discovery_Summary.md  PROMETHEUS_IMPLEMENTATION_PLAN.md  Phase5_ScriptSandbox_Implementation.md  README.md  TESTING_GUIDE_A2.md  TRACK_A_COMPLETE.md  mutable-tumbling-cookie.md  synthetic-zooming-fern-agent-ae035cd.md
frontend/: index.html  next.config.js  package-lock.json  package.json  vite.config.ts
scripts/: download-bundle-resources.ps1
sdk/: pyproject.toml
sdk/atlas_sdk/: __init__.py  cli.py  format.py  manifest.py  templates.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: README.md
src-tauri/src/: main.rs
test_docs/: TEST_PROTOCOL.txt  aspirin_pharmacology.txt  caffeine_and_common_molecules.txt  ibuprofen_drug_design.txt  lipinski_rule_of_five.txt  nsaid_comparison_study.txt  prompts.md  structural_alerts_toxicophores.txt
tests/: benchmark_navigator.py  locate_model.py  reproduce_issue.py  test_c6_candidate_generation.py  test_navigator_2.py  test_orchestrator_loop.py  test_prompt_validation.py  verify_phase_a3.py
tools/: profile.py  setup_env.sh  test.sh
(+485 files in other folders)
