[package]
name = "atlas"
version = "2.0.0"
description = "Atlas - AI-Native Knowledge Management Desktop App"
authors = ["Atlas Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "shell-sidecar",
    "path-all",
    "fs-all",
    "dialog-all",
    "window-all",
    "process-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
# Pin so idna_adapter's icu_properties matches icu_provider 2.1.1 (avoids 696 compile errors in icu_properties 2.1.2).
icu_properties = "=2.1.1"
# Pin data to match; 2.1.2 pulls in types icu_properties 2.1.1 doesn't expect (undeclared type errors).
icu_properties_data = "=2.1.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
